gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demoweb-gateway
spec:
  selector:
    app: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "demoweb.arecord.us"
