route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: demoweb
spec:
  host: demoweb.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
