vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demoweb 
spec:
  hosts:
  - demoweb 
  http:
  - route:
    - destination:
        host: demoweb
